--- a/src/components/FooterTab/FooterTab.module.scss
+++ b/src/components/FooterTab/FooterTab.module.scss
@@ -1,13 +1,22 @@
-#tab-bar.demo {
+.footerbar{
+  width:100%;
+  height:50px;
+  background: white;
   display: flex;
-  flex-direction: column;
+  line-height: 50px;
+  position: fixed;
+  left:0;
+  bottom:0;
+  border-top:1px solid #f1f1f1;
 }
-#tab-bar .demoName {
-  height: 40px;
+li{
+  flex: 1;
+  text-align: center;
 }
-#tab-bar .demo-preview-item .am-tab-bar {
-  background-color: white;
+a{
+  color: deepskyblue;
 }
-.green{
-  color: green !important;
+.active{
+  color:deeppink;
 }
+
