--- a/src/views/member/login/login.module.scss
+++ b/src/views/member/login/login.module.scss
@@ -5,5 +5,19 @@
   background:lightgoldenrodyellow;
   padding-left: 1rem;
   border-radius: .4rem;
-
+}
+.loginArea{
+  position: absolute;
+  z-index: -2;
+  width: 100%;
+  height:100%;
+  background: url('/static/img/login_bg.png');
+  background-size: cover
+}
+.loginMask{
+  position: absolute;
+  z-index: -1;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,.5)
 }
