--- a/src/components/FooterTab/FooterTab.module.scss
+++ b/src/components/FooterTab/FooterTab.module.scss
@@ -8,6 +8,7 @@
   left:0;
   bottom:0;
   border-top:1px solid #f1f1f1;
+  margin-bottom: 0;
 }
 li{
   flex: 1;
@@ -17,6 +18,6 @@ a{
   color: deepskyblue;
 }
 .active{
-  color:deeppink;
+  color:deeppink !important;
 }
 
